[gd_scene load_steps=11 format=2]

[ext_resource path="res://Enemies/MeleeEnemy/MeleeEnemy.gd" type="Script" id=1]
[ext_resource path="res://Enemies/MeleeEnemy/MeleeEnemy.png" type="Texture" id=2]
[ext_resource path="res://Enemies/MeleeEnemy/Chasing.gd" type="Script" id=3]
[ext_resource path="res://Enemies/MeleeEnemy/State_handler.gd" type="Script" id=4]
[ext_resource path="res://Enemies/MeleeEnemy/Red.gd" type="Script" id=5]
[ext_resource path="res://Enemies/MeleeEnemy/Flocking.gd" type="Script" id=6]
[ext_resource path="res://Enemies/MeleeEnemy/Blue.gd" type="Script" id=7]

[sub_resource type="CircleShape2D" id=1]
radius = 9.00114

[sub_resource type="CircleShape2D" id=2]
radius = 62.2762

[sub_resource type="CircleShape2D" id=3]
radius = 89.3743

[node name="Meele" type="Area2D" groups=[
"Enemy",
]]
collision_layer = 131329
collision_mask = 131329
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="State_handler" type="Node" parent="."]
script = ExtResource( 4 )

[node name="Chasing" type="Node" parent="State_handler"]
script = ExtResource( 3 )

[node name="Red" type="Node" parent="State_handler"]
script = ExtResource( 5 )

[node name="Flocking" type="Node" parent="State_handler"]
script = ExtResource( 6 )

[node name="Blue" type="Node" parent="State_handler"]
script = ExtResource( 7 )

[node name="ChargeRange" type="Area2D" parent="."]
collision_layer = 1024
collision_mask = 0

[node name="ChargeRange" type="CollisionShape2D" parent="ChargeRange"]
shape = SubResource( 2 )

[node name="FlockingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2147614720

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlockingArea"]
position = Vector2( -0.632813, -0.0234375 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="tree_exiting" from="." to="." method="_on_death"]
[connection signal="area_entered" from="ChargeRange" to="." method="close_enough"]
[connection signal="area_exited" from="ChargeRange" to="." method="far_enough"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
